# agl_package

./: .gitignore  CMakeLists.txt  README.md  agl_binding.cpp  gradient_boosting.py  make.sh  make_isaac.sh
csv_data_file/: CASF_2007_CoreSet.csv  PDBbindv2020_GenfinedSet.csv
src/: get_agl_features.py
utils/: INDEX_general_PL_data.2020  csv_data_maker.py  generate_kernel_parameters.ipynb  kernels.csv  protein_atom_dict.json  search_possible_atom_types.ipynb
